# poc-polars

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
docs/: 01.introdução.md
src/poc_polars/: 01.first.py  __about__.py  __init__.py
