[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poc-polars"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "Jo達o Antonio Ferreira", email = "joao.parana@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["matplotlib", "numpy", "pandas", "polars"]

[project.urls]
Documentation = "https://github.com/Jo達o Antonio Ferreira/poc-polars#readme"
Issues = "https://github.com/Jo達o Antonio Ferreira/poc-polars/issues"
Source = "https://github.com/Jo達o Antonio Ferreira/poc-polars"

[tool.hatch.version]
path = "src/poc_polars/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/poc_polars tests}"

[tool.coverage.run]
source_pkgs = ["poc_polars", "tests"]
branch = true
parallel = true
omit = ["src/poc_polars/__about__.py"]

[tool.coverage.paths]
poc_polars = ["src/poc_polars", "*/poc-polars/src/poc_polars"]
tests = ["tests", "*/poc-polars/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
